--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,30 @@
 {
   display:none
 }
+.question
+{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+body{
+  font-family: 'Roboto', sans-serif;
+
+}
+div:nth-child(even) 
+{
+  background: rgb(243, 242, 242);
+}
+select{
+  background:rgb(243, 242, 242);
+  
+}
+button
+{
+  padding:10px;
+  margin :10px;
+}
+#suggester
+{
+  margin: 15px 25%;
+}
