--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ select{
   background:rgb(243, 242, 242);
   
 }
+select,#duration{
+  background:none;
+  
+}
 button
 {
   padding:10px;
@@ -28,4 +32,20 @@ button
 #suggester
 {
   margin: 15px 25%;
+}
+h3,h5{
+  text-align: center;
+  margin: 10px 25%;
+}
+.btn_submit{
+  margin: 10px 25%;
+  text-align: center;
+  background:none;
+}
+h5{
+  font-style: italic;
+}
+#outputdiv
+{
+  background:none;
 }
